# dreamworld-reawakened

./: .dockerignore  .gitignore  api_handlers.py  dockerfile  main.py  pyproject.toml  readme.md  server.py  utility.py
DreamWorld_data/src/swf/pdw/assets/en/xml/: alert_strings.xml
DreamWorld_data/src/swf/pdw/assets/game/: resource.xml
handlers/: pdw_home.py
pdw/assets/en/xml/: home_format.xml  home_strings.xml
save_data/: crop_data.json
save_data_manager/: extra_data.py  load_save_gen5.py  save_manager.py
src/swf/pdw/assets/en/xml/: home_strings.xml
